--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: '3.7'
 services:
-  server:
-    image: yakwilik/mrga_backend@sha256:b83d2b8943b917d60a42e1a7c7c54c4feabcfa9442d7139e9e5aab763f874c91
-
-    command: bash -c "mkdir -p build
-              &&
-            cd build && cmake ..
-              &&
-            cmake --build . && cd ..
-              &&
-            ./build/project/server/server 0.0.0.0 8081 10.0.0.10 5432"
-    working_dir: '/backend'
-    volumes:
-      - "${PWD}/:/backend/"
-    ports:
-      - "8080:8081"
-    networks:
-      service-network:
+#  server:
+#    image: yakwilik/mrga_backend@sha256:b83d2b8943b917d60a42e1a7c7c54c4feabcfa9442d7139e9e5aab763f874c91
+#
+#    command: bash -c "mkdir -p build
+#              &&
+#            cd build && cmake ..
+#              &&
+#            cmake --build . && cd ..
+#              &&
+#            ./build/project/server/server 0.0.0.0 8081 10.0.0.10 5432"
+#    working_dir: '/backend'
+#    volumes:
+#      - "${PWD}/:/backend/"
+#    ports:
+#      - "8080:8081"
+#    networks:
+#      service-network:
 
   postgres:
     image: postgres:12.0-alpine
