Сервер: фикс сиг фолт

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,8 @@ SET(MAIN_DIR ${CMAKE_CURRENT_SOURCE_DIR} CACHE INTERNAL "MAIN_DIR")
 
 include_directories(SYSTEM /usr/local/include)
 
+#link_directories(/usr/local/lib)
+#link_libraries(pq pqxx)
+#include_directories(SYSTEM /usr/local/include)
+
 add_subdirectory(project)
