Profile page done

--- a/project/client/PartyTime/Components/UI/CMakeLists.txt
+++ b/project/client/PartyTime/Components/UI/CMakeLists.txt
@@ -27,7 +27,7 @@ file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp ${CMAKE_CURRENT_S
 file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/**/*.h ${CMAKE_CURRENT_SOURCE_DIR}/painter.hpp ${CMAKE_CURRENT_SOURCE_DIR}/styleHelper.hpp)
 
 set(LIB_NAME ui)
-set(LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/Button ${CMAKE_CURRENT_SOURCE_DIR}/Input ${CMAKE_CURRENT_SOURCE_DIR}/Label ${CMAKE_CURRENT_SOURCE_DIR}/Edit
+set(LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/Button ${CMAKE_CURRENT_SOURCE_DIR}/Input ${CMAKE_CURRENT_SOURCE_DIR}/Input2 ${CMAKE_CURRENT_SOURCE_DIR}/Label ${CMAKE_CURRENT_SOURCE_DIR}/Edit
 ${CMAKE_CURRENT_SOURCE_DIR}/Loader ${CMAKE_CURRENT_SOURCE_DIR}/Navbar)
 
 add_library(${LIB_NAME} ${SOURCES} ${HEADERS})
