--- a/project/client/PartyTime/Pages/CMakeLists.txt
+++ b/project/client/PartyTime/Pages/CMakeLists.txt
@@ -15,7 +15,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/..)
 set(PAGES_LIB_NAME pages)
 set(PAGES_LIB_DEP ${CMAKE_CURRENT_SOURCE_DIR}/AuthorizationPage ${CMAKE_CURRENT_SOURCE_DIR}/EventViewPage
 ${CMAKE_CURRENT_SOURCE_DIR}/LoadingPage ${CMAKE_CURRENT_SOURCE_DIR}/OrganizerPage ${CMAKE_CURRENT_SOURCE_DIR}/ProfilePage ${CMAKE_CURRENT_SOURCE_DIR}/RegistrationPage
-${CMAKE_CURRENT_SOURCE_DIR}/VisitorEventListPage ${CMAKE_CURRENT_SOURCE_DIR}/VisitorPage)
+${CMAKE_CURRENT_SOURCE_DIR}/VisitorEventListPage ${CMAKE_CURRENT_SOURCE_DIR}/VisitorPage ${CMAKE_CURRENT_SOURCE_DIR}/Settings)
 
 add_library(${PAGES_LIB_NAME} ${SOURCES} ${HEADERS})
 target_link_libraries(${PAGES_LIB_NAME} ${COMPONENTS_LIB} Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::SvgWidgets Qt${QT_VERSION_MAJOR}::Multimedia Qt${QT_VERSION_MAJOR}::MultimediaWidgets)
