--- a/project/server/handler/service/repository/CMakeLists.txt
+++ b/project/server/handler/service/repository/CMakeLists.txt
@@ -9,7 +9,7 @@ OPTION(WITH_SANITIZE "RUN_WITH_SANITIZE" OFF)
 set(MY_CXX_FLAGS "-Wall -Wextra -Wpedantic -fprofile -fprofile-arcs -Wredundant-decls -Wsign-conversion -Wcast-align -Wcast-qual -Wconversion -Wfloat-equal")
 set(MY_SANITIZERS_FLAGS "-fsanitize=address,undefined -fno-sanitize-recover=all -fsanitize-undefined-trap-on-error")
 set(MY_DEBUG_FLAGS "-g -O0")
-set(MY_TEST_FLAGS "-fprofile-arcs -ftest-coverage -fPIC -O0")
+# set(MY_TEST_FLAGS "-fprofile-arcs -ftest-coverage -fPIC -O0")
 set(MY_TEST_LINKER_FLAGS "-coverage")
 
 set(CMAKE_CXX_FLAGS ${MY_CXX_FLAGS})
@@ -28,8 +28,10 @@ if(WITH_TESTING)
 endif()
 
 link_directories(/usr/local/lib)
-link_libraries(pq pqxx)
+# link_libraries(pq pqxx)
+link_libraries(pqxx)
 include_directories(SYSTEM /usr/local/include)
+include_directories(SYSTEM ../../../../../deps/include)
 add_subdirectory(lib)
 
 if(WITH_TESTING)
