--- a/project/server/handler/service/repository/Makefile
+++ b/project/server/handler/service/repository/Makefile
@@ -16,7 +16,7 @@ docker_push:
 docker_run: 
 	docker run -it -v "${PWD}:/project" --net=host -v ~/.gitconfig:/etc/gitconfig -v ~/.ssh:/root/.ssh:ro -w "/project" --rm $(IMAGE_NAME)
 
-test: clean
+test:
 	scripts/build.sh -D WITH_TESTING=ON -D WITH_DEBUGING=ON -D WITH_MEMCHECK=OFF -D WITH_SANITIZE=OFF
 	scripts/test.sh
 
