--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -12,7 +12,7 @@ if (NOT DEFINED MAIN_DIR)
 endif ()
 
 link_directories(/usr/local/lib)
-link_libraries(pq pqxx)
+# link_libraries(pq pqxx)
 include_directories(SYSTEM /usr/local/include)
 
 add_subdirectory(server)
