--- a/project/server/handler/service/CMakeLists.txt
+++ b/project/server/handler/service/CMakeLists.txt
@@ -4,7 +4,7 @@ project(service_lib)
 include_directories(SYSTEM ${MAIN_DIR}/deps/include)
 
 link_directories(/usr/local/lib)
-link_libraries(pq pqxx)
+# link_libraries(pq pqxx)
 include_directories(SYSTEM /usr/local/include)
 
 add_subdirectory(repository/lib)
