deleted unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,4 @@ build-client-Desktop_x86_darwin_generic_mach_o_64bit-Debug/
 .DS_Store
 **.DS_*
 build-PartyTime-Desktop_x86_darwin_generic_mach_o_64bit-Debug/
+.DS_Store/
