--- a/project/server/handler/service/repository/CMakeLists.txt
+++ b/project/server/handler/service/repository/CMakeLists.txt
@@ -27,11 +27,12 @@ if(WITH_TESTING)
     set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${MY_TEST_LINKER_FLAGS})
 endif()
 
+include_directories(SYSTEM /deps)
 link_directories(/usr/local/lib)
-link_libraries(pq pqxx)
 include_directories(SYSTEM /usr/local/include)
+include_directories(SYSTEM ../../../../../deps/include)
 add_subdirectory(lib)
-
+link_libraries(pqxx)
 if(WITH_TESTING)
     if(WITH_SANITIZE)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_SANITIZERS_FLAGS}")
