--- a/project/server/handler/service/repository/docker-compose.yml
+++ b/project/server/handler/service/repository/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   postgres:
-    image: postgres
+    image: postgres:12.0-alpine
     environment:
       POSTGRES_DB: "mashadb"
       POSTGRES_USER: "mashapg"
@@ -18,6 +18,7 @@ services:
     image: yakwilik/mrga_backend
     network_mode: "host"
     volumes:
+      - "${PWD}/../../../../../deps:/deps"
       - "${PWD}:/project"
     working_dir: /project
     stdin_open: true # docker run -i
