редактирование gitignore + конфиг

--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ build-PartyTime-Desktop_x86_darwin_generic_mach_o_64bit-Debug
 
 **/project/client
 
-**/project/server/handler/service/repository
+# **/project/server/handler/service/repository
 
 *.log
 **/build/
