--- a/project/server/handler/service/repository/CMakeLists.txt
+++ b/project/server/handler/service/repository/CMakeLists.txt
@@ -29,7 +29,9 @@ endif()
 
 include_directories(SYSTEM /deps)
 link_directories(/usr/local/lib)
+link_directories(/opt/homebrew/lib)
 include_directories(SYSTEM /usr/local/include)
+include_directories(SYSTEM /opt/homebrew/include)
 include_directories(SYSTEM ../../../../../deps/include)
 add_subdirectory(lib)
 link_libraries(pqxx)
